FIX: sections padding-bottom on mobile

--- a/app/styles/home/communitySection.sass
+++ b/app/styles/home/communitySection.sass
@@ -164,7 +164,7 @@
 
 @media all and (max-width: 480px)
     .community-section
-        padding-top: gem(80)
+        padding-top: gem(0)
         padding-bottom: gem(99)
         .community-background
             .bg-ellipse
