--- a/app/styles/home/playersSection.sass
+++ b/app/styles/home/playersSection.sass
@@ -99,7 +99,7 @@
 @media all and (max-width: 480px)
 
     .players-section
-        padding: gem(80) 0
+        padding: 0 0 gem(80) 0
         .players-background
             .bg-circles
                 right: gem(-35)
