--- a/app/styles/home/protocolsSection.sass
+++ b/app/styles/home/protocolsSection.sass
@@ -88,7 +88,7 @@
 
 @media all and (max-width: 480px)
     .protocols-section
-        padding-bottom: gem(86)
+        padding-bottom: gem(80)
         .protocols-background
             .bg-ellipse1
                 top: gem(-30)
