--- a/app/styles/home/statsSection.sass
+++ b/app/styles/home/statsSection.sass
@@ -51,7 +51,7 @@
 
 @media all and (max-width: 480px)
     .stats-section
-        padding-bottom: gem(100)
+        padding-bottom: gem(80)
         .stats-background
             position: relative
             .bg-ellipse
